--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,6 +97,18 @@ h3 {
 .link-container {
   margin: auto;
 }
+.link-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.calltoaction {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+}
 
 .link {
   margin-bottom: 15px;
@@ -158,4 +170,44 @@ h3 {
   justify-content: center;
   align-items: center;
   background: #f7fafd;
+}
+
+.card {
+  display: flex;
+  width: 250px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: #fff;
+  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.1);
+}
+.img1 {
+  width: 251.004px;
+  height: 250px;
+  background: lightgray 50% / cover no-repeat;
+}
+.content {
+  display: flex;
+  height: 50px;
+  padding: 0px 20px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.avatar {
+  color: #000;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: flex;
+  height: 50px;
+  padding: 0px 20px;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 15px;
+  background: #fbbd3c;
 }
